--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.18.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@react-three/drei": "^10.0.7",
